fixed horizontal scrolling and added consonants to script

--- a/style/style.css
+++ b/style/style.css
@@ -4,17 +4,57 @@
     src: url("./kxrh.ttf") format("truetype");
 }
 
+@media (max-width: 1919px) {
+    body,
+    header,
+    html,
+    nav {
+        min-width: 1920px;
+    }
+}
+
+.consonant-grid {
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    table-layout: fixed;
+    width: 60%;
+}
+
+.consonant-grid p {
+    font-size: 16px;
+}
+
+.consonant-grid td,
+.consonant-grid th {
+    border: 1px solid #000000;
+    text-align: center;
+    width: 20%;
+}
+
+.consonant-grid td {
+    background-color: #383838;
+}
+
+.consonant-grid th {
+    background-color: #181818;
+    color: #c45a5a;
+}
+
+.ipa
+{
+    font-family: 'Times New Roman';
+}
 .kxrh {
     font-family: "KXRh";
-    font-size: 32px;
-    margin-top: 8px;
+    font-size: 44px;
 }
 
 body {
     background-color: #383838;
     color: #d8d8d8;
+    font-family: Corbel;
     margin-top: 0;
-    min-width: 1920px;
     padding-top: 85px;
 }
 
@@ -27,20 +67,19 @@ header {
     justify-content: center;
     left: 0;
     margin: 0;
-    min-width: 1920px;
     position: fixed;
     top: 0;
+    user-select: none;
     width: 100%;
 }
 
 header p {
-    font-family: Corbel;
     font-size: 32px;
     margin: 0;
 }
 
 header .kxrh {
-    font-size: 40px;
+    padding-top: 12px;
 }
 
 nav {
@@ -50,7 +89,6 @@ nav {
     display: flex;
     height: 35px;
     left: 0;
-    min-width: 1920px;
     position: fixed;
     top: 50px;
     width: 100%;
@@ -61,8 +99,8 @@ nav a {
     color: inherit;
     display: flex;
     flex: 1;
-    font-family: Corbel;
     height: 100%;
     justify-content: center;
     text-decoration: none;
+    user-select: none;
 }
